2005-10-02  Rodney Dawes  <dobey@novell.com>

	* 16x16/stock/media/Makefile.am:
	* 24x24/stock/media/Makefile.am:
	* 32x32/stock/media/Makefile.am:
	Install these icons to the gnome theme instead of the hicolor theme,
	as it does not provide the proper directories to find the icons

2005-10-02  Jakub Steiner <jimmac@ximian.com>

	* stock_volume.png:
	* stock_volume-0.png:
	* stock_volume-max.png:
	* stock_volume-med.png:
	* stock_volume-min.png:
	* stock_volume-mute.png: new volume applet icons at 32x32px

2005-09-23  Rodney Dawes  <dobey@novell.com>

	* 16x16/stock/emoticons/Makefile.am: Install these into the gnome
	icon theme directory and not the hicolor theme directory

	Fixes http://bugzilla.novell.com/show_bug.cgi?id=91387

2005-09-08  Jakub Steiner <jimmac@ximian.com>

	* scalable/apps/volume-knob.svg: forgot to add

2005-09-07  Jakub Steiner <jimmac@ximian.com>

	* 24x24/apps/evolution.png: make the envelope larger.

2005-09-06  Jakub Steiner <jimmac@ximian.com>

	* volume-knob: remove 48x48, replace with an SVG and provide the
	  16x16 and 24x24 bitmaps. Fixes bug #308160.
	
2005-09-04  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.12.0 release

	* 16x16/stock/net/Makefile.am (install-data-local):
	Fix an issue with Tor's patch that caused a missing separator error

2005-09-04  Tor Lillqvist  <tml@novell.com>

	* 16x16/stock/net/Makefile.am (install-data-local):
	* 24x24/stock/net/Makefile.am (install-data-local):
	* 48x48/mimetypes/Makefile.am (install-data-hook):
	Create icondir before installing into it.
	No / between $(DESTDIR) and $(icondir).

2005-09-03  Jakub Steiner <jimmac@ximian.com>

	* scalable/apps/Makefile.am: this actually goes to hicolor
	* 24x24/apps/evolution.png: updated
	* 32x32/apps/evolution.png: removed

2005-08-26  Jakub Steiner <jimmac@ximian.com>

	* index.theme.in: also make 48x48 filesystems 
	  scalable (as per bug #314346
	
2005-08-22  Rodney Dawes  <dobey@novell.com>

	* NEWS: